fixed the stacking on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ h1 {
 
 .creator {
     margin-bottom: 10px;
+    position: relative;
 }
 
 .creator-name {
